@@ -7,6 +7,7 @@ Changed
     Update SNAP apache version to 2.4.54
     Re-structure node code
     Node should no longer need reloading after adding a host
+    Add padding back to sidebar items (#532)
 
 0.15.0 - 06/08/2022
 
